Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -13,53 +13,54 @@ layout: default
 </head>
 <body>
     <h1>Top AI Blog Posts of the Week</h1>
-    
+
+    <h2>Title: Anthropic says its latest AI bot can beat Gemini and ChatGPT</h2>
+    <h3>Source: The Verge</h3>
+    <h4>Summary:</h4>
+    <ul>
+        <li>Anthropic has announced the next generation of its AI models, Claude 3, which is now multimodal and claims to be more capable than ChatGPT and Google Gemini.</li>
+        <li>Claude 3 models can answer more questions, understand longer instructions, and provide more accurate results by understanding more context and processing more information.</li>
+        <li>The new models are less likely to refuse to answer prompts and can give near-instant results even when parsing dense material like research papers.</li>
+        <li>Opus, the largest and most intelligent model, outperformed most models in benchmarking tests, showing better reasoning and understanding of math and code.</li>
+        <li>Claude 3 models improve significantly over the previous Claude 2.1 model, with Sonnet being twice as fast and excelling in tasks requiring rapid responses.</li>
+    </ul>
+    <a href="https://www.theverge.com/2024/3/4/24090087/anthropic-claude-3-opus-ai-chatbot-multimodal">Read More</a>
+
     <h2>Title: Here's everything you need to know about Gemini 1.5, Google's newly updated AI model that hopes to challenge OpenAI</h2>
     <h3>Source: Business Insider</h3>
     <h4>Summary:</h4>
     <ul>
         <li>Google is developing a new large language model called Gemini 1.5 to rival OpenAI's GPT-4.</li>
-        <li>Gemini 1.5 uses a "mixture of experts" model for efficiency and has a larger context window, allowing it to analyze more data.</li>
-        <li>In testing, Gemini 1.5 outperformed its predecessors in benchmark tests and showed enhanced performance.</li>
-        <li>Google conducted extensive ethics and safety testing for Gemini 1.5 to mitigate potential harm.</li>
-        <li>Gemini 1.5 is part of Google's efforts to compete with other big tech companies and startups in the AI space.</li>
+        <li>Gemini 1.5 uses a "mixture of experts" model for efficiency and has a larger context window.</li>
+        <li>The new model outperformed its predecessor in benchmark tests and can analyze more data.</li>
+        <li>Gemini 1.5 underwent enhanced safety testing to mitigate potential harm.</li>
+        <li>Google's parent company, Alphabet, is facing a $2.3 billion lawsuit from Axel Springer, Business Insider's parent company, over advertising practices.</li>
     </ul>
-    <a href="https://www.businessinsider.com/google-gemini-1-5-retools-ai-into-one-advanced-model-2024-2">Read more</a>
+    <a href="https://www.businessinsider.com/google-gemini-1-5-retools-ai-into-one-advanced-model-2024-2">Read More</a>
 
     <h2>Title: Nvidia unveils AI chatbot ‘Chat with RTX’ for local PCs</h2>
     <h3>Source: ReadWrite</h3>
     <h4>Summary:</h4>
     <ul>
-        <li>Nvidia has released an early version of its Chat with RTX, allowing users to create personalized chatbots with their own content on Windows PCs.</li>
-        <li>The chatbot utilizes retrieval-augmented generation (RAG), NVIDIA TensorRT-LLM software, and NVIDIA RTX acceleration to bring generative AI capabilities to local PCs.</li>
-        <li>Users can upload their own documents and connect local files on their PC as a dataset to enable queries for relevant answers.</li>
-        <li>Chat with RTX supports various file formats and can search YouTube URLs and transcripts for specific mentions or summarize entire videos.</li>
-        <li>The chatbot processing is done locally on the user's PC, ensuring speed, privacy, and the ability to process sensitive data without sharing it with third parties.</li>
+        <li>Nvidia has released an early version of its Chat with RTX, a demo that allows users to personalize a chatbot with their own content on Windows PCs.</li>
+        <li>The custom generative AI is free to download and requires an RTX 30 or 40-series GPU with at least 8GB of VRAM.</li>
+        <li>Chat with RTX can search YouTube URLs and transcripts for specific mentions and summarize entire videos.</li>
+        <li>Users can connect local files on their PC as a dataset to an open-source large language model, enabling queries for relevant answers.</li>
+        <li>The tool uses retrieval-augmented generation (RAG), NVIDIA TensorRT-LLM software, and NVIDIA RTX acceleration to bring generative AI capabilities to local, GeForce-powered Windows PCs.</li>
     </ul>
-    <a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read more</a>
+    <a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read More</a>
 
-    <h2>Title: Sora AI: ‘everyone will be filmmakers’, internet reacts to OpenAI’s new video generator</h2>
+    <h2>Title: Anthropic claim new Claude 3 AI chatbot outperforms ChatGPT and Gemini</h2>
     <h3>Source: ReadWrite</h3>
     <h4>Summary:</h4>
     <ul>
-        <li>OpenAI has announced Sora, a new text-to-video AI that can create realistic and imaginative scenes from text instructions.</li>
-        <li>Reactions to Sora have been mixed, with some users enthusiastic about its potential for amateur filmmakers.</li>
-        <li>Sora has limitations in terms of missing out on cause-and-effect details and finer spatial details.</li>
-        <li>It is currently not available for public use and OpenAI has not disclosed whether it will be free or have a tiered access approach.</li>
-        <li>OpenAI is actively working on safety measures to prevent malicious use and engaging with policymakers to address potential abuses of the tool.</li>
+        <li>Anthropic has launched Claude 3, a chatbot that claims to have reached "near-human" levels of performance and outperforms ChatGPT and Google Gemini in industry benchmarks.</li>
+        <li>Claude 3 offers three different models with varying levels of power and functionality: Haiku, Sonnet, and Opus.</li>
+        <li>Opus, the largest-capacity model, displays higher graduate-level reasoning than GPT-4 and performs better in tests involving math, coding, and knowledge.</li>
+        <li>Claude 3 has been trained using publicly available and internal data, and utilizes hardware from Amazon Web Services and Google Cloud technology.</li>
+        <li>Anthropic, founded by former OpenAI personnel, aims to disrupt the field of conversational AI with Claude 3.</li>
     </ul>
-    <a href="https://readwrite.com/openai-unveils-sora-its-first-text-to-video-model/">Read more</a>
+    <a href="https://readwrite.com/anthropic-claim-new-claude-3-ai-chatbot-outperforms-chatgpt-and-gemini/">Read More</a>
 
-    <h2>Title: Google launches Gemma: new open source AI tool for developers</h2>
-    <h3>Source: ReadWrite</h3>
-    <h4>Summary:</h4>
-    <ul>
-        <li>Google has launched Gemma, a new open-source AI tool for developers. Gemma is part of a family of lightweight open-source models designed to be used by researchers and developers to innovate with AI.</li>
-        <li>Gemma models come in different sizes to address different computational constraints and applications. Gemma 7B is a seven-billion-parameter model for efficient deployment on GPUs and TPUs, while Gemma 2B is a two-billion-parameter model for CPU and on-device applications.</li>
-        <li>Google is introducing a responsible generative AI toolkit and a debugging tool to guide developers in creating safer AI applications with Gemma.</li>
-        <li>Gemma outperforms similar-sized open models on text-based tasks and demonstrates strong performance across academic benchmarks for language understanding, reasoning, and safety.</li>
-        <li>Developers can access Gemma through integrations with JAX, PyTorch, TensorFlow, and various platforms and frameworks, and Google is offering free credits and grants to support their usage of Gemma.</li>
-    </ul>
-    <a href="https://readwrite.com/google-launches-gemma-new-open-source-ai-tool-for-developers/">Read more</a>
 </body>
 </html>
