--- a/news.html
+++ b/news.html
@@ -13,50 +13,52 @@ layout: default
 </head>
 <body>
 <h1>Top AI News Stories of the Week</h1>
-<h2>Title: The Apple Car project is reportedly dead</h2>
-<h3>Source: Engadget</h3>
-<h3>Summary:</h3>
-<ul>
-<li>Apple has officially canceled its Apple Car project after ten years, billions of dollars, and multiple leadership changes.</li>
-<li>The employees working on the car project will be transferred to Apple's artificial intelligence division to work on generative AI projects.</li>
-<li>Some hardware engineers and car designers from the car team may be able to apply for jobs in other divisions of the company, while the rest are likely to be laid off.</li>
-<li>Apple had initially aimed to build a fully self-driving car without pedals or a steering wheel but reportedly pared down its ambitions in recent years.</li>
-<li>The cancellation of the Apple Car project is seen as a rare setback for the company, which had worked on various aspects of the car's development, including powertrains, self-driving technology, and car interiors.</li>
-</ul>
-<a href="https://www.engadget.com/the-apple-car-project-is-reportedly-dead-203012885.html">Link</a>
 
-<h2>Title: The Morning After: Apple's car project may be dead</h2>
-<h3>Source: Engadget</h3>
-<h3>Summary:</h3>
+<h2>Title: OpenAI says Elon Musk wanted ‘absolute control’ of the company</h2>
+<h3>Source: The Verge</h3>
+<h4>Summary:</h4>
 <ul>
-<li>Apple has reportedly canceled its Project Titan, also known as the Apple Car, after nearly a decade of development and multiple leadership changes.</li>
-<li>The company will move employees from the car project to its artificial intelligence division to focus on generative AI projects.</li>
-<li>Previous leaks suggested that the Apple Car was initially envisioned as a fully self-driving vehicle but later scaled down to a more standard electric vehicle.</li>
-<li>The cancellation of the Apple Car project leaves uncertainty about the company's plans in the automotive industry.</li>
+<li>OpenAI has responded to Elon Musk's lawsuit, stating that Musk wanted "absolute control" of the company by merging it with Tesla.</li>
+<li>OpenAI will move to dismiss all of Musk's claims from the breach of contract lawsuit.</li>
+<li>Musk alleged that OpenAI has become a closed-source subsidiary of Microsoft focused on making money, which goes against its original nonprofit mission.</li>
+<li>OpenAI defended its decision to not open-source its work, stating that Musk understood that the mission did not imply open-sourcing artificial general intelligence (AGI).</li>
 </ul>
-<a href="https://www.engadget.com/the-morning-after-apples-car-project-may-be-dead-121513763.html">Link</a>
+<a href="https://www.theverge.com/2024/3/5/24091773/openai-response-elon-musk-breach-of-contract-lawsuit">Read More</a>
 
-<h2>Title: Apple to scrap electric car project, much to Elon Musk’s delight</h2>
+<h2>Title: AI Might Not Be the Future of Fast Food Drive-Thru Lanes After All</h2>
+<h3>Source: Gizmodo.com</h3>
+<h4>Summary:</h4>
+<ul>
+<li>Fast food restaurants have been experimenting with AI in drive-thru lanes to improve efficiency and increase sales.</li>
+<li>However, one AI company, Presto, is struggling financially and losing some of its biggest clients.</li>
+<li>Del Taco, which initially praised Presto's AI technology, has decided to stop using it in its restaurants.</li>
+<li>Customers have had mixed experiences with AI voice recognition technology in drive-thru lanes, with some complaining about misinterpreted orders.</li>
+<li>Presto's CEO remains optimistic about the future and believes there is significant interest in Voice AI from franchise operators.</li>
+</ul>
+<a href="https://gizmodo.com/ai-voice-activated-drive-thru-lanes-fast-food-presto-1851308673">Read More</a>
+
+<h2>Title: Artificial intelligence vs machine learning: what’s the difference?</h2>
 <h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
+<h4>Summary:</h4>
 <ul>
-<li>Apple is winding down its electric car project, Project Titan, and shifting its focus to artificial intelligence (AI).</li>
-<li>The decision to scrap the project shocked the nearly 2,000 employees involved and was celebrated by Tesla CEO Elon Musk.</li>
-<li>The car team employees will be transferred to Apple's AI division, led by executive John Giannandrea, but there may be potential layoffs.</li>
-<li>This move by Apple reflects wider changes in the automotive sector, with leading car manufacturers shifting their focus to hybrid vehicles due to high costs and insufficient charging facilities. Tesla, however, still plans to build new electric vehicles in mid-2025.</li>
+<li>Artificial intelligence (AI) is a collection of technologies that allows machines to think, learn, and solve complex problems.</li>
+<li>Machine learning (ML) is a subset of AI that enables machines to learn and improve from experience without explicit programming.</li>
+<li>AI represents the overarching principle of allowing machines to understand, reason, act, or adapt like humans, while machine learning focuses on building systems that can independently learn from and adapt to new data.</li>
+<li>Machine learning algorithms are classified into four types: supervised, unsupervised, semi-supervised, and reinforcement learning.</li>
+<li>AI and machine learning have various applications in the real world, including financial tasks, cybersecurity, and fraud detection in mobile apps.</li>
 </ul>
-<a href="https://readwrite.com/apple-to-scrap-electric-car-project-much-to-elon-musks-delight/">Link</a>
+<a href="https://readwrite.com/artificial-intelligence-vs-machine-learning-whats-the-difference/">Read More</a>
 
-<h2>Title: Nvidia’s AI sector contributes to significant earnings boost</h2>
-<h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
+<h2>Title: A former Google engineer was arrested for allegedly stealing AI secrets for Chinese rivals</h2>
+<h3>Source: Engadget</h3>
+<h4>Summary:</h4>
 <ul>
-<li>Nvidia's AI sector has contributed to a 400% increase in data center earnings, thanks to the high quality of their graphics processing units (GPUs) and cutting-edge deep learning applications.</li>
-<li>Strategic partnerships with Google, Alibaba, and Microsoft have accelerated Nvidia's growth in the AI space.</li>
-<li>Nvidia's software strategy focuses on the integration of multiple open-source software components to create a strong AI software platform, ensuring consistent performance, enhanced security, and scalability.</li>
-<li>Nvidia's commitment to outperforming competitors is evident through an 18% increase in R&D investments and the adoption of a leading-edge software strategy across major cloud providers.</li>
+<li>A former Google engineer has been arrested for stealing over 500 files containing AI trade secrets and using them to benefit rival tech companies in China.</li>
+<li>The engineer, Linwei Ding, uploaded the stolen trade secrets from his Google-issued laptop to personal cloud storage accounts over a one-year period.</li>
+<li>The stolen documents included crucial components of Google's AI infrastructure.</li>
+<li>The arrest comes amidst heightened tensions between the US and China over AI, and the Biden administration's efforts to prevent the export of advanced AI chips to China.</li>
 </ul>
-<a href="https://readwrite.com/nvidias-ai-sector-contributes-to-significant-earnings-boost/">Link</a>
+<a href="https://www.engadget.com/a-former-google-engineer-was-arrested-for-allegedly-stealing-ai-secrets-for-chinese-rivals-010846023.html">Read More</a>
 
 </body>
 </html>
