Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -9,58 +9,57 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Top AI Blog Posts of the Week</title>
+<title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
-    <h1>Top AI Blog Posts of the Week</h1>
+<h1>Top AI Blog Posts of the Week</h1>
+<h2>Title: Anthropic says its latest AI bot can beat Gemini and ChatGPT</h2>
+<h3>Source: The Verge</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Anthropic has released the next generation of its AI models, Claude 3, which is now multimodal and claims to outperform leading models from Google and OpenAI.</li>
+<li>Claude 3 models can answer more questions, understand longer instructions, and provide more accurate results by processing more context and information.</li>
+<li>The models are less likely to refuse to answer prompts and can give near-instant results even when handling dense material like research papers.</li>
+<li>Opus, the largest model, outperformed OpenAI's GPT-4 in graduate-level reasoning and showed better performance in math questions, coding, and reasoning tasks.</li>
+<li>Anthropic trained the Claude 3 models using a mix of internal and third-party datasets, with investments from Amazon and Google, and the models will be available on AWS and Google's Vertex AI.</li>
+</ul>
+<a href="https://www.theverge.com/2024/3/4/24090087/anthropic-claude-3-opus-ai-chatbot-multimodal">Link</a>
 
-    <h2>Title: Anthropic says its latest AI bot can beat Gemini and ChatGPT</h2>
-    <h3>Source: The Verge</h3>
-    <h4>Summary:</h4>
-    <ul>
-        <li>Anthropic has announced the next generation of its AI models, Claude 3, which is now multimodal and claims to be more capable than ChatGPT and Google Gemini.</li>
-        <li>Claude 3 models can answer more questions, understand longer instructions, and provide more accurate results by understanding more context and processing more information.</li>
-        <li>The new models are less likely to refuse to answer prompts and can give near-instant results even when parsing dense material like research papers.</li>
-        <li>Opus, the largest and most intelligent model, outperformed most models in benchmarking tests, showing better reasoning and understanding of math and code.</li>
-        <li>Claude 3 models improve significantly over the previous Claude 2.1 model, with Sonnet being twice as fast and excelling in tasks requiring rapid responses.</li>
-    </ul>
-    <a href="https://www.theverge.com/2024/3/4/24090087/anthropic-claude-3-opus-ai-chatbot-multimodal">Read More</a>
+<h2>Title: Here's everything you need to know about Gemini 1.5, Google's newly updated AI model that hopes to challenge OpenAI</h2>
+<h3>Source: Business Insider</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Google is developing Gemini 1.5, a next-gen AI model designed to be a personal assistant and business tool.</li>
+<li>Gemini 1.5 uses a "mixture of experts" model for efficiency and has a bigger context window, allowing it to analyze more data.</li>
+<li>In benchmark tests, Gemini 1.5 outperformed its predecessors in 87% of the tests and was able to find small pieces of text in large blocks of data.</li>
+<li>Google conducted extensive ethics and safety testing on Gemini 1.5 to mitigate potential harm.</li>
+<li>Gemini 1.5 is meant to rival competitors like OpenAI's GPT-4.</li>
+</ul>
+<a href="https://www.businessinsider.com/google-gemini-1-5-retools-ai-into-one-advanced-model-2024-2">Link</a>
 
-    <h2>Title: Here's everything you need to know about Gemini 1.5, Google's newly updated AI model that hopes to challenge OpenAI</h2>
-    <h3>Source: Business Insider</h3>
-    <h4>Summary:</h4>
-    <ul>
-        <li>Google is developing a new large language model called Gemini 1.5 to rival OpenAI's GPT-4.</li>
-        <li>Gemini 1.5 uses a "mixture of experts" model for efficiency and has a larger context window.</li>
-        <li>The new model outperformed its predecessor in benchmark tests and can analyze more data.</li>
-        <li>Gemini 1.5 underwent enhanced safety testing to mitigate potential harm.</li>
-        <li>Google's parent company, Alphabet, is facing a $2.3 billion lawsuit from Axel Springer, Business Insider's parent company, over advertising practices.</li>
-    </ul>
-    <a href="https://www.businessinsider.com/google-gemini-1-5-retools-ai-into-one-advanced-model-2024-2">Read More</a>
+<h2>Title: Anthropic claim new Claude 3 AI chatbot outperforms ChatGPT and Gemini</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Anthropic has launched a new chatbot, Claude 3, which claims to have reached "near-human" levels of performance in some tests.</li>
+<li>Claude 3 outperforms ChatGPT and Google Gemini in several industry benchmarks.</li>
+<li>The three models of Claude 3, Haiku, Sonnet, and Opus, offer different levels of power and functionality.</li>
+<li>Opus, the largest-capacity model, displays higher graduate-level reasoning than GPT-4 and performs better in tasks involving math, coding, and knowledge.</li>
+<li>Claude 3 has been trained using publicly available and internal data, with hardware from Amazon Web Services and Google Cloud technology.</li>
+</ul>
+<a href="https://readwrite.com/anthropic-claim-new-claude-3-ai-chatbot-outperforms-chatgpt-and-gemini/">Link</a>
 
-    <h2>Title: Nvidia unveils AI chatbot ‘Chat with RTX’ for local PCs</h2>
-    <h3>Source: ReadWrite</h3>
-    <h4>Summary:</h4>
-    <ul>
-        <li>Nvidia has released an early version of its Chat with RTX, a demo that allows users to personalize a chatbot with their own content on Windows PCs.</li>
-        <li>The custom generative AI is free to download and requires an RTX 30 or 40-series GPU with at least 8GB of VRAM.</li>
-        <li>Chat with RTX can search YouTube URLs and transcripts for specific mentions and summarize entire videos.</li>
-        <li>Users can connect local files on their PC as a dataset to an open-source large language model, enabling queries for relevant answers.</li>
-        <li>The tool uses retrieval-augmented generation (RAG), NVIDIA TensorRT-LLM software, and NVIDIA RTX acceleration to bring generative AI capabilities to local, GeForce-powered Windows PCs.</li>
-    </ul>
-    <a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read More</a>
-
-    <h2>Title: Anthropic claim new Claude 3 AI chatbot outperforms ChatGPT and Gemini</h2>
-    <h3>Source: ReadWrite</h3>
-    <h4>Summary:</h4>
-    <ul>
-        <li>Anthropic has launched Claude 3, a chatbot that claims to have reached "near-human" levels of performance and outperforms ChatGPT and Google Gemini in industry benchmarks.</li>
-        <li>Claude 3 offers three different models with varying levels of power and functionality: Haiku, Sonnet, and Opus.</li>
-        <li>Opus, the largest-capacity model, displays higher graduate-level reasoning than GPT-4 and performs better in tests involving math, coding, and knowledge.</li>
-        <li>Claude 3 has been trained using publicly available and internal data, and utilizes hardware from Amazon Web Services and Google Cloud technology.</li>
-        <li>Anthropic, founded by former OpenAI personnel, aims to disrupt the field of conversational AI with Claude 3.</li>
-    </ul>
-    <a href="https://readwrite.com/anthropic-claim-new-claude-3-ai-chatbot-outperforms-chatgpt-and-gemini/">Read More</a>
+<h2>Title: Google launches Gemma: new open source AI tool for developers</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Google has launched a new open-source AI tool called Gemma, which is part of a family of lightweight models designed for researchers and developers to innovate safely with AI.</li>
+<li>Gemma comes in two versions, Gemma 2B and Gemma 7B, with different parameter sizes to address various computational constraints and developer requirements.</li>
+<li>Google claims that Gemma outperforms similar-sized open models on text-based tasks and demonstrates strong performance in language understanding, reasoning, and safety.</li>
+<li>Alongside Gemma, Google is introducing a responsible generative AI toolkit and a debugging tool to guide the creation of safer AI applications.</li>
+<li>Google is offering free access to Gemma through Kaggle and Colab, as well as providing free credits and grants to developers and researchers interested in using Gemma.</li>
+</ul>
+<a href="https://readwrite.com/google-launches-gemma-new-open-source-ai-tool-for-developers/">Link</a>
 
 </body>
 </html>
